@@ -1,3 +1,8 @@
+[B]Version 1.3.1 - 20.12.2013[/B]
+    * bug - XBMC 12.2 FRODO: fixed broken dependence
+    * improvement - pkg_list: display "No Package!" if there are no packages at all
+    * improvement - general: point out that the JD application cannot be reached in case of connection problems. "server" was not clear
+
 [B]Version 1.3.0 - 18.06.2012[/B]
     * bug - jdnightly: fixed problems with nightly version of JDownloader
     * bug - pkg_list: fixed empty list in 'finished packages' sub menu
